extension/skin/classic/css.css
/* See license.txt for terms of usage */

.panelNode-css {
    overflow-x: hidden;
}

.cssSheet > .insertBefore {
    height: 1.5em;
}

.cssRule {
    position: relative;
    margin: 1em 0 0 6px;
    font-family: monospace;
    color: #000000;
}

.cssRule:first-child {
    margin-top: 6px;
}

.cssElementRuleContainer {
    position: relative;
}

.cssElementRuleContainer > .objectLink {
    -moz-user-select: none;
}

.cssHead {
    padding-right: 150px;
}

.cssProp {
    padding-left: 3em;
    line-height: 1.4em;
}

.cssProp > span:first-child {
    margin-left: -3em;
}

.cssPropName {
    color: darkgreen;
}

.cssPropValue,
.cssFontPropValue {
    color: darkblue;
}

.cssPropValueUnused,
.cssFontPropSeparator,
.cssParentMatch {
    color: #787878;
}

.cssOverridden > .cssPropName,
.cssOverridden > .cssPropValue,
.cssOverridden > .selectorName,
.cssOverridden > td > .stylePropValue {
    text-decoration: line-through;
}

.computedStyleTable,
.matchedSelectorsTable {
    width: 100%;
    border-spacing: 0;
}

.computedStylesGroup > .computedStyleTable {
    display: none;
}

.computedStylesGroup.opened > .computedStyleTable {
    display: table;
}

.cssInheritHeader, .cssComputedHeader {
    position: relative;
    -moz-user-select: none;
}

.cssComputedHeader,
.computedStyle.hasSelectors {
    cursor: pointer;
}

.computedStyle.hasSelectors > .stylePropName {
    background-position: 4px 4px !important;
}

.computedStylesGroup > .computedStyleTable > tbody > .computedStyle.hasSelectors > .stylePropName {
    background-position: 10px 4px !important;
}

.computedStylesGroup > .cssComputedHeader {
    margin: 0;
}

.computedStylesGroup.hidden {
    display: none;
}

.cssComputedHeader > .twisty {
    background-position: 4px 4px !important;
}

.cssInheritLabel,
.cssComputedLabel {
    margin-right: 0.25em;
    font-weight: bold;
}

.cssComputedLabel {
    margin-left: 14px;
}

.computedStyle:not(:nth-last-child(2)) > td,
.computedStyle:nth-last-child(2).opened > td,
.computedStyle:not(:nth-last-child(2)) + .matchedSelectors .styleSelector > td,
.computedStyle:nth-last-child(2) + .matchedSelectors .styleSelector:not(:last-child) > td {
    border-bottom: 1px solid #EFEFEF;
}

.computedStyleRow > td {
    padding-top: 2px;
    padding-bottom: 2px;
}

.selectorName {
    width: 160px;
    -moz-padding-start: 24px;
}

.stylePropName {
    width: 160px;
    vertical-align: top;
    font-weight: bold;
    padding: 0 4px 0 24px;
}

.styleSelector > td > .stylePropValue {
    padding-left: 3px;
}

.propValue {
    width: 140px;
}

.matchedSelectors {
    display: none;
}

.computedStyle.opened + .matchedSelectors {
    display: table-row;
}

.styleSourceLink > .objectLink-sourceLink {
    position: relative;
    top: 0;
    left: 0;
    padding: 0;
    text-align: right;
}

.cssElementRuleContainer > .objectLink-sourceLink {
    top: 0;
}

.cssProp.editGroup:hover {
    background: transparent url(chrome://firebug/skin/disable.svg) no-repeat 2px 1px;
    filter: none;
}

.cssProp.editGroup > span:first-child {
    cursor: pointer;
}

.cssProp.disabledStyle {
    background: transparent url(chrome://firebug/skin/disable.svg) no-repeat 2px 1px;
    filter: url("chrome://mozapps/skin/extensions/extensions.svg#greyscale");
    color: #CCCCCC;
}

.cssProp.disabledStyle > .cssPropName,
.cssProp.disabledStyle > .cssPropValue,
.cssProp.disabledStyle > .cssPropValue span {
    color: inherit;
}

.cssPropValue.editing + .cssSemi,
.inlineExpander + .cssSemi {
    display: none;
}

.cssPropValue.editing {
    white-space: nowrap;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

.useA11y .a11yCSSView .focusRow:focus {
    outline: none;
    background-color: transparent
 }

 .useA11y .a11yCSSView .focusRow:focus .cssSelector,
 .useA11y .a11yCSSView .focusRow:focus .cssPropName,
 .useA11y .a11yCSSView .focusRow:focus .cssPropValue,
 .useA11y .a11yCSSView .computedStyleRow:focus,
 .useA11y .a11yCSSView .groupHeader:focus {
    outline: 2px solid #FF9933;
    outline-offset: -2px;
    background-color: #FFFFD6;
 }

 .useA11y .a11yCSSView .groupHeader:focus {
    outline-offset: -2px;
 }

.infoTipColorBox {
    background-color: #C8C8C8;
    background-image:
        -moz-linear-gradient(45deg, #A0A0A0 25%, transparent 25%),
        -moz-linear-gradient(-45deg, #A0A0A0 25%, transparent 25%),
        -moz-linear-gradient(45deg, transparent 75%, #A0A0A0 75%),
        -moz-linear-gradient(-45deg, transparent 75%, #A0A0A0 75%);
    background-size: 16px 16px;
    background-position:0 0, 8px 0, 8px -8px, 0px 8px;
}

